--- a/module4/HW4_Provided/knn/hw_4_knn.ipynb
+++ b/module4/HW4_Provided/knn/hw_4_knn.ipynb
@@ -196,7 +196,14 @@
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
-    "# TODO :: define the knn classifier, expect 2 lines of the code \n"
+    "# TODO :: define the knn classifier, expect 2 lines of the code\n",
+    "knn = KNeighborsClassifier(\n",
+    "    n_neighbors=5, \n",
+    "    p=2,\n",
+    "    metric='minkowski'\n",
+    ")\n",
+    "\n",
+    "knn.fit(X_train, y_train)\n"
    ]
   },
   {
