--- a/module4/HW4_Provided/decisiontree/hw_4_dt.ipynb
+++ b/module4/HW4_Provided/decisiontree/hw_4_dt.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "$\\text{For Modal A}$\n",
     "\n",
-    "$\\text{misclassification rate = C2, } \\frac{400/800} = 0.50$\n",
+    "$\\text{misclassification rate = C2, } \\frac{400}{800} = 0.50$\n",
     "\n",
     "$\\text{Found with 400 points from C1 and 400 points from C2, where C2 is the misclassification}$\n",
     "\n",
@@ -47,7 +47,7 @@
     "\n",
     "$\\text{For Modal B}$\n",
     "\n",
-    "$\\text{misclassification rate is the same as in Model A = } \\frac{400/800} = 0.50$\n",
+    "$\\text{misclassification rate is the same as in Model A = } \\frac{400}{800} = 0.50$\n",
     "\n",
     "$\\text{ with the first split, we find 0 misclassified points from C1 on the second leaf and 200 from C2 on the first leaf - so, }$\n",
     "\n",
