--- a/final_project/final_project_part_2.ipynb
+++ b/final_project/final_project_part_2.ipynb
@@ -53,7 +53,7 @@
     "\n",
     "---\n",
     "\n",
-    "### Part 1\n",
+    "### Macro Market Data\n",
     "\n",
     "We will be using some readily available ETF data which tracks each of these macro economic features. \n",
     "\n",
@@ -71,7 +71,7 @@
     "\n",
     "---\n",
     "\n",
-    "### Part 2\n",
+    "### Technical Indicator Data\n",
     "\n",
     "We will be conducting feature engineering of the daily close price data in order to construct features that make 4 of the indicators;\n",
     "\n",
@@ -92,11 +92,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: yfinance in c:\\users\\ruizchr.vcm\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (0.1.74)\n",
+      "Requirement already satisfied: requests>=2.26 in c:\\users\\ruizchr.vcm\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from yfinance) (2.31.0)\n",
+      "Requirement already satisfied: numpy>=1.15 in c:\\users\\ruizchr.vcm\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from yfinance) (1.23.1)\n",
+      "Requirement already satisfied: pandas>=0.24.0 in c:\\users\\ruizchr.vcm\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from yfinance) (1.4.3)\n",
+      "Requirement already satisfied: lxml>=4.5.1 in c:\\users\\ruizchr.vcm\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from yfinance) (4.9.1)\n",
+      "Requirement already satisfied: multitasking>=0.0.7 in c:\\users\\ruizchr.vcm\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from yfinance) (0.0.11)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in c:\\users\\ruizchr.vcm\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from pandas>=0.24.0->yfinance) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\ruizchr.vcm\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from pandas>=0.24.0->yfinance) (2022.2)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\ruizchr.vcm\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from requests>=2.26->yfinance) (1.26.6)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\ruizchr.vcm\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from requests>=2.26->yfinance) (2.10)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\ruizchr.vcm\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from requests>=2.26->yfinance) (2021.5.30)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\ruizchr.vcm\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from requests>=2.26->yfinance) (2.1.0)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\ruizchr.vcm\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages (from python-dateutil>=2.8.1->pandas>=0.24.0->yfinance) (1.16.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 23.0.1 -> 24.0\n",
+      "[notice] To update, run: C:\\Users\\ruizchr.VCM\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
    "source": [
     "# import required packages\n",
+    "!pip3 install yfinance\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import yfinance as yf\n",
@@ -105,49 +135,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/yfinance/utils.py:775: FutureWarning: The 'unit' keyword in TimedeltaIndex construction is deprecated and will be removed in a future version. Use pd.to_timedelta instead.\n",
-      "  df.index += _pd.TimedeltaIndex(dst_error_hours, 'h')\n",
-      "sys:1: ResourceWarning: Unclosed socket <zmq.Socket(zmq.PUSH) at 0x130998820>\n",
-      "ResourceWarning: Enable tracemalloc to get the object allocation traceback\n",
-      "[*********************100%%**********************]  1 of 1 completed"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n",
       "\n",
-      "/var/folders/hw/f8pnpzm163q0j3yww182vmgm0000gn/T/ipykernel_84267/1107437381.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "1 Failed download:\n",
+      "- TQQQ: No data found for this date range, symbol may be delisted\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
       "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  tqqq_price['TQQQ Daily Returns'] = tqqq_price['Adj Close'].pct_change()\n",
-      "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/yfinance/utils.py:775: FutureWarning: The 'unit' keyword in TimedeltaIndex construction is deprecated and will be removed in a future version. Use pd.to_timedelta instead.\n",
-      "  df.index += _pd.TimedeltaIndex(dst_error_hours, 'h')\n",
-      "[*********************100%%**********************]  1 of 1 completed\n",
-      "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/yfinance/utils.py:775: FutureWarning: The 'unit' keyword in TimedeltaIndex construction is deprecated and will be removed in a future version. Use pd.to_timedelta instead.\n",
-      "  df.index += _pd.TimedeltaIndex(dst_error_hours, 'h')\n",
-      "[*********************100%%**********************]  1 of 1 completed\n",
-      "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/yfinance/utils.py:775: FutureWarning: The 'unit' keyword in TimedeltaIndex construction is deprecated and will be removed in a future version. Use pd.to_timedelta instead.\n",
-      "  df.index += _pd.TimedeltaIndex(dst_error_hours, 'h')\n",
-      "[*********************100%%**********************]  1 of 1 completed\n",
-      "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/yfinance/utils.py:775: FutureWarning: The 'unit' keyword in TimedeltaIndex construction is deprecated and will be removed in a future version. Use pd.to_timedelta instead.\n",
-      "  df.index += _pd.TimedeltaIndex(dst_error_hours, 'h')\n",
-      "[*********************100%%**********************]  1 of 1 completed\n",
-      "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/yfinance/utils.py:775: FutureWarning: The 'unit' keyword in TimedeltaIndex construction is deprecated and will be removed in a future version. Use pd.to_timedelta instead.\n",
-      "  df.index += _pd.TimedeltaIndex(dst_error_hours, 'h')\n",
-      "[*********************100%%**********************]  1 of 1 completed\n",
-      "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/yfinance/utils.py:775: FutureWarning: The 'unit' keyword in TimedeltaIndex construction is deprecated and will be removed in a future version. Use pd.to_timedelta instead.\n",
-      "  df.index += _pd.TimedeltaIndex(dst_error_hours, 'h')\n",
-      "[*********************100%%**********************]  1 of 1 completed\n"
+      "1 Failed download:\n",
+      "- TBF: No data found for this date range, symbol may be delisted\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "\n",
+      "1 Failed download:\n",
+      "- TIP: No data found for this date range, symbol may be delisted\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "\n",
+      "1 Failed download:\n",
+      "- UUP: No data found for this date range, symbol may be delisted\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "\n",
+      "1 Failed download:\n",
+      "- VIXY: No data found for this date range, symbol may be delisted\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "\n",
+      "1 Failed download:\n",
+      "- USO: No data found for this date range, symbol may be delisted\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "\n",
+      "1 Failed download:\n",
+      "- GLD: No data found for this date range, symbol may be delisted\n"
      ]
     }
    ],
@@ -178,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -212,97 +234,28 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2010-12-31</th>\n",
-       "      <td>40.828968</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2011-01-03</th>\n",
-       "      <td>40.875099</td>\n",
-       "      <td>0.001130</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2011-01-04</th>\n",
-       "      <td>40.865883</td>\n",
-       "      <td>-0.000225</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2011-01-05</th>\n",
-       "      <td>41.751663</td>\n",
-       "      <td>0.021675</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2011-01-06</th>\n",
-       "      <td>41.576347</td>\n",
-       "      <td>-0.004199</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-02-22</th>\n",
-       "      <td>23.780001</td>\n",
-       "      <td>-0.002517</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-02-23</th>\n",
-       "      <td>23.440001</td>\n",
-       "      <td>-0.014298</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-02-26</th>\n",
-       "      <td>23.530001</td>\n",
-       "      <td>0.003840</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-02-27</th>\n",
-       "      <td>23.690001</td>\n",
-       "      <td>0.006800</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-02-28</th>\n",
-       "      <td>23.530001</td>\n",
-       "      <td>-0.006754</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3311 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            TBF Adj Close  TBF Daily Returns\n",
-       "Date                                        \n",
-       "2010-12-31      40.828968                NaN\n",
-       "2011-01-03      40.875099           0.001130\n",
-       "2011-01-04      40.865883          -0.000225\n",
-       "2011-01-05      41.751663           0.021675\n",
-       "2011-01-06      41.576347          -0.004199\n",
-       "...                   ...                ...\n",
-       "2024-02-22      23.780001          -0.002517\n",
-       "2024-02-23      23.440001          -0.014298\n",
-       "2024-02-26      23.530001           0.003840\n",
-       "2024-02-27      23.690001           0.006800\n",
-       "2024-02-28      23.530001          -0.006754\n",
-       "\n",
-       "[3311 rows x 2 columns]"
+       "Empty DataFrame\n",
+       "Columns: [TBF Adj Close, TBF Daily Returns]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tbf_price\n",
-    "# tip_price\n",
-    "# uup_price\n",
-    "# vixy_price\n",
-    "# uso_price\n",
-    "# pd.DataFrame(gld_price)\n",
-    "# tqqq_price"
+    "df = pd.merge(tqqq_price, tbf_price, left_index=True, right_index=True)\n",
+    "df = pd.merge(df, tip_price, left_index=True, right_index=True)\n",
+    "df = pd.merge(df, uup_price, left_index=True, right_index=True)\n",
+    "df = pd.merge(df, vixy_price, left_index=True, right_index=True)\n",
+    "df = pd.merge(df, uso_price, left_index=True, right_index=True)\n",
+    "df = pd.merge(df, gld_price, left_index=True, right_index=True)"
    ]
   },
   {
@@ -557,7 +510,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
