beginning to create my own RNN

--- a/module10/HW10_Provided_TF2/hw_10.ipynb
+++ b/module10/HW10_Provided_TF2/hw_10.ipynb
@@ -1028,14 +1028,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import libraries\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# importing training data\n",
+    "df_train = pd.read_csv('data/Google_Stock_Price_Train.csv')\n",
+    "\n",
+    "# remove dates and set as np array\n",
+    "train_array = df_train.iloc[:, 1:2].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# scale features - minmax for normalization\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "# initialize scalar\n",
+    "sc = MinMaxScaler()\n",
+    "train_array_normalized = sc.fit_transform(train_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create data structures\n",
+    "x_train = []\n",
+    "y_train =  []\n",
+    "\n",
+    "# recalling 60 previous stock prices for x_train to predict y_train\n",
+    "for i in range(60, len(train_array_normalized)):\n",
+    "\n",
+    "    # creates a sliding window\n",
+    "    x_train.append(train_array_normalized[i-60:i, 0])\n",
+    "    y_train.append(train_array_normalized[i, 0])\n",
+    "\n",
+    "# convert training lists to np.array\n",
+    "x_train = np.array(x_train)\n",
+    "y_train = np.array(y_train)"
    ]
   },
   {
@@ -1043,7 +1094,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# reshape data structures - num of predictors\n",
+    "x_train = np.reshape(x_train, ())"
+   ]
   }
  ],
  "metadata": {
