--- a/module10/HW10_Provided_TF2/hw_10.ipynb
+++ b/module10/HW10_Provided_TF2/hw_10.ipynb
@@ -1028,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1069,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1091,12 +1091,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# reshape data structures - num of predictors\n",
-    "x_train = np.reshape(x_train, ())"
+    "x_train = np.reshape(x_train, (x_train.shape[0], x_train.shape[1], 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# building RNN architecture\n",
+    "# !pip3 install tensorflow\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense\n",
+    "from keras.layers import LSTM\n",
+    "from keras.layers import Dropout\n",
+    "\n",
+    "# initilising RNN\n",
+    "regressor = Sequential()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create first LSTM layer and dropout regularisation\n",
+    "regressor.add(LSTM(\n",
+    "    \n",
+    "))"
    ]
   }
  ],
@@ -1116,7 +1145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.5"
   },
   "nav_menu": {},
   "toc": {
