Begin creating framework / approach

--- a/final_project/fp_3/final_project_part_3.ipynb
+++ b/final_project/fp_3/final_project_part_3.ipynb
@@ -1,10 +1,53 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Final Project - Part 3 | Model\n",
+    "\n",
+    "1. Identify and implement at least three different models.\n",
+    "    - Model choices must include at least one supervised and one unsupervised learning model.\n",
+    "    \n",
+    "2. The business objective can vary for supervised versus unsupervised model.\n",
+    "\n",
+    "3. For each model prepare a report showing \n",
+    "    - results obtained and hyperparameter values used\n",
+    "    - justification for dimensionality reduction (or not) including supporting data\n",
+    "    - resulting conclusions for each model regarding potential fit. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Approach"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## RNN Timeseries Market Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Classification Model - XGBoost?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Segmentation Model - KMeans"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
