--- a/final_project/fp_3/final_project_part_3.ipynb
+++ b/final_project/fp_3/final_project_part_3.ipynb
@@ -21,28 +21,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Approach"
+    "# Approach"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## RNN Timeseries Market Data"
+    "# RNN Timeseries Market Data"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Classification Model - XGBoost?"
+    "# Classification Model - XGBoost?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Segmentation Model - KMeans"
+    "# Segmentation Model - KMeans"
    ]
   },
   {
