created etl pipeline and started inv simulation py file.

--- a/final_project/fp_3/final_project_part_3.ipynb
+++ b/final_project/fp_3/final_project_part_3.ipynb
@@ -28,6 +28,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Part 3 of our final project will see implementations of three different approaches to solving the underlying questions on investment timing for TQQQ. First, before seeking the different methods on answering the question, I would like to restate the goal of our ML models. That is, to appropriately time the long, short, or hold of the TQQQ ETF. Although perfect market timing is impossible to achieve, according to the Efficient Market Hypothesis. Below will outline the expectations for each of the models and how I believe that these methods might accomplish more efficient entries and exits into the market."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## RNN\n",
+    "\n",
+    "Through RNN, we are attempting to achieve predictions for 3, 5, 10, and 20 day future prices of the security. This approach will then allow us to use the investment function to decide how we will time our investment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# RNN Timeseries Market Data"
    ]
   },
