updated place holder markdown spots for RNN code

--- a/final_project/fp_3/final_project_part_3.ipynb
+++ b/final_project/fp_3/final_project_part_3.ipynb
@@ -35,16 +35,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## RNN\n",
-    "\n",
-    "Through RNN, we are attempting to achieve predictions for 3, 5, 10, and 20 day future prices of the security. This approach will then allow us to use the investment function to decide how we will time our investment"
+    "# RNN Timeseries Market Data"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# RNN Timeseries Market Data"
+    "Through RNN, we are attempting to achieve predictions for 3, 5, 10, and 20 day future prices of the security. This approach will then allow us to use the investment function to decide how we will time our investment. These times investments for 3, 5, 10, and 20 days will be our dependent variables that we will attempt to predict using our independent variables."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preparing The Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Removing Unnecessary Features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Splitting Between Train and Test Sets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Standardize and/or Normalize"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Re-Shape for RNN - 60 Day Lookback"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conduct Cross Validation"
    ]
   },
   {
