completed final project part 3

--- a/final_project/fp_3/final_project_part_3.ipynb
+++ b/final_project/fp_3/final_project_part_3.ipynb
@@ -2823,7 +2823,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will actually be able to use the normalized data from our RNN Timeseries model to segment our data. Our approach here is to determine if certain time periods are segmented as trending downward or trending upward. We migh possibly see some seasonality in the data as well. This will be conducted for each rolling window period of 20, 60, and 120 days similar to how we evaluated our RNN model. However, we will be reviewing silouette scores to determine the best k value to use for our data."
+    "We will actually be able to use the normalized data from our RNN Timeseries model to segment our data. Our approach here is to determine if certain time periods are segmented as trending downward or trending upward. We might possibly see some seasonality in the data as well. This will be conducted for each rolling window period of 20, 60, and 120 days similar to how we evaluated our RNN model. However, we will be reviewing silouette scores to determine the best k value to use for our data."
    ]
   },
   {
